re acomodar archivos

--- a/menu.kv
+++ b/menu.kv
@@ -45,7 +45,7 @@ BoxLayout:
             rgb: .6, .6, .6
         Rectangle:
             size: self.size
-            source: 'fondo.png'
+            source: 'images/fondo.png'
 
     ActionBar:#WARNING: NECESITA 'ActionPrevious' aunque no se use
 
