--- a/pantallas/inicio.kv
+++ b/pantallas/inicio.kv
@@ -19,7 +19,7 @@ ContentScreen:
         size_hint_y: None
         Image: #TODO: encontrar como cambiar tamanio
             id: unamimg
-            source: 'unam.png'
+            source: 'images/unam.png'
             #size_hint_y: None
             size: self.width, self.height
             #width: 300
